test/pass/pass_17.prsl
// RUN: %edir/prsl --codegen %s -o pass_17.ll
// RUN: clang++ -Wno-override-module pass_17.ll -o pass_17
// RUN: echo "1 2 3 4 5" | %S/pass_17 | filecheck %s --match-full-lines
// RUN: echo "1 2 3 4 5" | %edir/prsl %s | filecheck %s --match-full-lines
// CHECK: 5
// CHECK-NEXT: 6

a={
?;
?;
?;
?;
?;
}
print a++;
print a;